quotable-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quotable-deployment
  labels:
    app: quotable
spec:
  replicas: 1
  selector:
    matchLabels:
      app: quotable
  template:
    metadata:
      labels:
        app: quotable
    spec:
      containers:
      - name: quotable
        image: mtlucas/quotable:1.0.2
        ports:
        - containerPort: 4000
---
apiVersion: v1
kind: Service
metadata:
  name: quotable-ip
spec:
  ports:
  - port: 4000
    protocol: TCP
    targetPort: 4000
  selector:
    app: quotable
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
  type: ClusterIP
---
# RKE2-nginx.ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
  name: quotable-ingress
spec:
  rules:
  - host: dev-k8s-m1.dev.rph.int
    http:
      paths:
      - backend:
          service:
            name: quotable-ip
            port:
              number: 4000
        path: /quotable(/|$)(.*)
        pathType: Prefix
---
# Traefik middleware
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: quotable-strip-prefix
spec:
  stripPrefix:
    prefixes:
      - /quotable
---
# Traefik ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: default-quotable-strip-prefix@kubernetescrd
    traefik.ingress.kubernetes.io/router.entrypoints: web
  name: quotable-ingress
spec:
  rules:
    - http:
        paths:
          - path: /quotable
            pathType: Prefix
            backend:
              service:
                name: quotable-ip
                port:
                  number: 4000
